--- a/matthew-ia/src/styles/sass/react-components/ProjectList.scss
+++ b/matthew-ia/src/styles/sass/react-components/ProjectList.scss
@@ -37,7 +37,7 @@
     //transform: translate(0, -50%);
   }
 
-  #p-id {
+  .p-id {
     font-family: $font-inconsolata;
     padding: 10px 12px;
     background-color: $brand-primary;
