--- a/matthew-ia/src/styles/sass/responsive.scss
+++ b/matthew-ia/src/styles/sass/responsive.scss
@@ -177,26 +177,31 @@
     }
   }
   #projects {
+    margin: 0 auto;
     #p-list {
+      display: inline-block;
       margin: 0 auto;
-      clear: both;
-      overflow: hidden;
     }
     h1 {
       margin: 3vh 0 5vh;
       position: static;
     }
     .p-item {
-      display: block;
-      overflow: hidden;
+      display: inline-block;
+      //float: left;
+      //width: 80%;
       margin: 0 auto 64px auto;
       &:last-of-type {
         margin-bottom: 120px;
       }
-      max-height: 300px;
-      max-width: 400px;
+      .p-id {
+        position: absolute;
+        margin: 0;
+      }
     }
     .p-image {
+      max-width: 100%;
+      max-height: 100%;
     }
   }
 }
@@ -217,8 +222,6 @@
   }
   #projects {
     .p-image {
-      max-height: 250px;
-      max-width: 350px;
     }
   }
 }
